<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.casanova.Dashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/ButtonView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:textAlignment="center"
                android:gravity="bottom"
                />

            <com.startapp.android.publish.ads.banner.Banner
                android:layout_gravity="center"
                android:id="@+id/startAppBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <LinearLayout
                    android:onClick="Page1"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorGrapeFruit"
                    >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/first"
                        android:tint="@color/colorWhite"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorGrapeFruitDark"
                        android:text="@string/Title1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        />

                </LinearLayout>

                <LinearLayout
                    android:onClick="Page2"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorBitterSweet"
                    >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/second"
                        android:tint="@color/colorWhite"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorBitterSweetDark"
                        android:text="@string/Title2"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ad1"
                    android:onClick="Page3"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorFlower"
                    >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/third"
                        android:tint="@color/colorWhite"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorFlowerDark"
                        android:text="@string/Title3"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        />

                </LinearLayout>


            </LinearLayout>

            <!-- Second Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <LinearLayout
                    android:onClick="Page4"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorGrass"
                    >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/fourth"
                        android:tint="@color/colorWhite"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorGrassDark"
                        android:text="@string/Title4"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        />

                </LinearLayout>

                <LinearLayout
                    android:onClick="Page5"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorBlueJeans"
                    >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/fifth"
                        android:tint="@color/colorWhite"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorBlueJeansDark"
                        android:text="@string/Title5"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ad6"
                    android:onClick="Page6"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorLavander"
                    >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/sixth"
                        android:tint="@color/colorWhite"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorLavanderDark"
                        android:text="@string/Title6"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        />

                </LinearLayout>


            </LinearLayout>
            <!-- End Second Row-->


        </LinearLayout>

    </ScrollView>



</LinearLayout>
